# thingymajig

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
src/thingamajig/aws/: s3.py  sqs.py
tests/: test_module.py
