[metadata]
name = 


version = 0.0.1
description = A thingymajig for working with clouds
long_description = file: README.txt
long_description_content_type = text/x-text
author = Marc Weinmann
author_email = myfishiesloveme@gmail.com
license = Apache 2.0
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    homepage = https://github.com/openwurl/boto3-helpers

[options]
packages = find:
python_requires = >=3.8
install_requires =
    boto3
    botocore

[options.packages.find]
exclude =
    tests

[flake8]
max_line_length = 120